# dead-simple-analytics

./: .env.example  .gitignore  Makefile  README.md  docker-compose.test.yml  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_init_schema.py  0002_correlation_key.py  0003_drop_correlation_key.py  0004_visitor_hash.py  0005_users_username.py  0006_event_id.py  0007_admin_username.py
backend/app/: dependencies.py  main.py
backend/app/api/: schemas.py
backend/app/api/routers/: auth.py  collect.py  demo_mode.py  events.py  health.py  live.py  pages.py  partials.py  sites.py  stats.py
backend/config/: logging.py  settings.py
backend/core/: csrf.py  exceptions.py  html.py  live.py  rate_limit.py  serialize.py
backend/db/: connection.py  migrations.py
backend/db/repositories/: events.py  sites.py  users.py
backend/demo/: fixtures.py  mode.py
backend/services/: auth.py  collect.py  events.py  sites.py  stats.py
backend/tests/: conftest.py
backend/tests/integration/: conftest.py  helpers.py  test_auth.py  test_collect_pipeline.py  test_coverage_gaps.py  test_demo_mode.py  test_health.py  test_live.py  test_security.py  test_sites.py
backend/tests/unit/: test_app_coverage_gaps.py  test_compose_healthchecks.py  test_coverage_helpers.py  test_demo_visitor_stats.py  test_live_and_edges.py  test_live_hub.py  test_rate_limit.py  test_sites_curl.py  test_stats_service.py  test_visitor_hash.py  test_visitor_identity.py
backend/web/: paths.py
backend/web/static/: dashboard.html  login.html  sites.html
backend/web/static/css/: app.css
backend/web/static/js/: api.js  dashboard.js  demo-footer.js  dsa.js  login.js  shell.js  sites.js
deploy/: Caddyfile.example  install.sh  test_watchdog.sh  watchdog.sh  watchdog_state.py
(+1 files in other folders)
