[project]
name = "dsa-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.32.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.0",
  "alembic>=1.14.0",
  "pyjwt>=2.9.0",
  "bcrypt>=4.2.0",
  "pydantic[email]>=2.10.0",
  "pydantic-settings>=2.6.0",
  "python-multipart>=0.0.12",
  "tzdata>=2024.1",
]

[dependency-groups]
dev = [
  "pytest>=8.3.0",
  "httpx>=0.28.0",
  "ruff>=0.8.0",
  "pytest-cov>=7.1.0",
  "pytest-asyncio>=1.4.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
addopts = [
  "--cov=app",
  "--cov=config",
  "--cov=core",
  "--cov=db",
  "--cov=demo",
  "--cov=services",
  "--cov=web",
  "--cov-report=term-missing",
  "--cov-fail-under=100",
]

[tool.coverage.run]
omit = [
  "alembic/*",
  "tests/*",
  ".venv/*",
]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
  "if TYPE_CHECKING:",
]
